Updates
Bump source to JDK21
Add xsd:float support
cleanup

wip